--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
+    "fs-extra": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-load-plugins": "^1.5.0"
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-uglify": "^3.0.0",
+    "pump": "^1.0.2"
   }
 }
