--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "license": "MIT",
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
+    "chalk": "^2.0.1",
+    "del": "^3.0.0",
     "fs-extra": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-size": "^2.1.0",
+    "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^3.0.0",
-    "pump": "^1.0.2"
+    "pump": "^1.0.2",
+    "run-sequence": "^2.1.0"
   }
 }
